Add basic test suite with 100% line/branch coverage
While this does have 100% line/branch coverage, the testing it does is
fairly minimal beyond generating the expected files.  The actual way
to test significant changes, which I've been doing for years, is to
generate rdoc for a large project before and after the change, then
review the differences between the two to make sure they are expected.

Coverage testing was able to find some unnecessary code:

* sanitize_code_blocks no longer has an effect.  The stripping of
  leading spaces must be done by rdoc itself now.
* Remove unnecessary conditionals in render_class_tree.
* link_to/link_to_method are never callsed with a classname, and
  are always called with a url, so change those arguments to
  required.

Handle https links the same as http links, so they target _top.

Switch to FileUtils.mkdir_p in more places, and remove unnecessary
File.directory? guards.

From testing, I found that the ERB support was broken on Ruby 2.1
and below, since it uses Binding#local_variables.  Require Ruby 2.2
as minimum version now, and switch the RDoc::Markup::ToHtml override
to use Module#prepend.

Move author information from the library itself to the README.

--- a/README.rdoc
+++ b/README.rdoc
@@ -52,12 +52,12 @@ cutting corners (like using fixed widths).
 The Hanna template was created by {Mislav}[http://mislav.uniqpath.com/] and
 since then has seen contributions from:
 
-1. {Tony Strauss}[http://github.com/DesigningPatterns], who participated from
-   the early start and made tons of fixes and enhancements to the template;
-2. {Hongli Lai}[http://blog.phusion.nl/] with the search filter for methods.
-3. {Erik Hollensbe}[http://github.com/erikh] a serious refactoring and up to
+1. {Tony Strauss}[https://github.com/DesigningPatterns], who participated from
+   the early start and made tons of fixes and enhancements to the template.
+2. {Michael Granger}[https://github.com/ged] who maintained the original RDoc template.
+3. {Hongli Lai}[https://blog.phusion.nl/] with the search filter for methods.
+4. {Erik Hollensbe}[https://github.com/erikh] a serious refactoring and up to
    date with RDoc 2.5.x and 3.x, now named 'hanna-nouveau'.
-4. {James Tucker}[http://github.com/raggi] minor cleanups for Erik.
-5. {Jeremy Evans}[http://github.com/jeremyevans] RDoc 4 support, maintenance
-   since 2014.
-
+5. {James Tucker}[https://github.com/raggi] minor cleanups and RubyGems integration
+6. {Jeremy Evans}[https://github.com/jeremyevans] RDoc 4+ support, switch from
+   haml/sass to erb, maintenance since 2014.
