--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# master
+
+* Improve style for mobile devices (janko)
+
 # 1.3.0 (2022-06-27)
 
 * Use details/summary for class index (jeremyevans)
