--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
-# master
+# 1.4.0 (2023-01-10)
 
-* Improve style for mobile devices (janko)
+* Improve style for mobile devices (janko) (#18, #19)
 
 # 1.3.0 (2022-06-27)
 
