--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# 1.5.0 (2023-08-10)
+
+* Depend on hanna, as the gem was renamed to hanna (jeremyevans)
+
 # 1.4.0 (2023-01-10)
 
 * Improve style for mobile devices (janko) (#18, #19)
