Fix usage with RDoc 6.13.1+
RDoc 6.13.0 broke hanna, without a way to fix it.  RDoc 6.13.1+
added an alternative approach that allows hanna to work, so
use that approach if it is available.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+# master
+
+* Fix usage with RDoc 6.13.1+ (no support for RDoc 6.13.0) (jeremyevans)
+
 # 1.5.0 (2023-08-10)
 
 * Rename back to hanna, after mislav granted access to the name (jeremyevans)
